--- a/src/Archmage/GameBundle/Resources/views/Home/help.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Home/help.html.twig
@@ -27,7 +27,7 @@
                 <a href="#facciones" class="btn btn-default"><i class="fa fa-fw fa-rebel"></i><span class="hidden-xs">Facciones</span></a>
                 <a href="#edificios" class="btn btn-default"><i class="fa fa-fw fa-industry"></i><span class="hidden-xs">Edificios</span></a>
                 <a href="#unidades" class="btn btn-default"><i class="fa fa-fw fa-group"></i><span class="hidden-xs">Unidades</span></a>
-                <a href="#heroes" class="btn btn-default"><i class="fa fa-fw fa-group"></i><span class="hidden-xs">Héroes</span></a>
+                <a href="#heroes" class="btn btn-default"><i class="fa fa-fw fa-user"></i><span class="hidden-xs">Héroes</span></a>
                 <a href="#hechizos" class="btn btn-default"><i class="fa fa-fw fa-magic"></i><span class="hidden-xs">Hechizos</span></a>
                 <a href="#artefactos" class="btn btn-default"><i class="fa fa-fw fa-joomla"></i><span class="hidden-xs">Artefactos</span></a>
                 <a href="#comentarios" class="btn btn-default"><i class="fa fa-fw fa-commenting"></i><span class="hidden-xs">Comentarios</span></a>
@@ -35,15 +35,15 @@
         </div>
         <div class="col-xs-12">
             <div class="page-header text-center">
-                <h1><i class="fa fa-fw fa-info-circle"></i>Ayuda</h1>
+                <h1><i class="fa fa-fw fa-book"></i>Wiki</h1>
             </div>
         </div>
         {# separamos el manual en otra division para ser ocultado en caso de busqueda #}
         <div class="col-xs-12 manual">
             <div class="panel panel-default"><a name="intro"></a>
-                <div class="panel-heading text-center"><i class="fa fa-fw fa-question-circle"></i>Introducción</div>
+                <div class="panel-heading text-center"><i class="fa fa-fw fa-question-circle"></i>General</div>
                 <div class="panel-body text-responsive text-only">
-                    <p>En la desolada pero potencialmente mágica tierra de W&yuml;z&auml;rd, asumirás el rol de un mag@ novici@ intentando hacerse un hueco en un mundo plagado de enemigos. Competirás contra otros jugadores y NPCs por la supremacía en una carrera económica y militar, investigando diversos y poderosos <span class="label label-extra">Hechizos</span>, reclutando gran variedad de <span class="label label-extra">Unidades</span>, contratando <span class="label label-extra">Héroes</span> que ayudarán en tu campaña y encontrando misteriosos <span class="label label-artifact">Artefactos</span> que usar en tu beneficio, o incluso en perjuicio de otros.</p>
+                    <p>En la desolada pero potencialmente mágica tierra de W&yuml;z&auml;rd, asumirás el rol de un mag@ novici@ intentando hacerse un hueco en un mundo plagado de enemigos. Competirás contra otros jugadores y NPCs por la supremacía en una carrera económica y militar, explorando territorios, construyendo importantes <span class="label label-extra">Edificios</span>, investigando diversos y poderosos <span class="label label-extra">Hechizos</span>, reclutando gran variedad de <span class="label label-extra">Unidades</span>, contratando <span class="label label-extra">Héroes</span> que ayudarán en tu campaña y encontrando misteriosos <span class="label label-artifact">Artefactos</span> que usar en tu beneficio, o incluso en perjuicio de otros.</p>
                 </div>
             </div>
             <div class="panel panel-default">
@@ -138,7 +138,7 @@
             <div class="panel panel-default"><a name="multicuentas"></a>
                 <div class="panel-heading text-center"><i class="fa fa-fw fa-group"></i>Multicuentas</div>
                 <div class="panel-body text-responsive text-only">
-                    <p style="color:red;">El uso de varias cuentas por la misma persona otorga una tremenda ventaja y va en contra de las normas del juego. Los infractores serán perseguidos, <span class="label label-extra">baneados</span> a perpetuidad y <span class="label label-extra">sodomizados con un paraguas</span>.</p>
+                    <p style="color:red;">El uso de varias cuentas por la misma persona otorga una tremenda ventaja y va en contra de las normas del juego. Los infractores serán perseguidos y baneados del servidor permanentemente.</p>
                 </div>
             </div>
         </div>
