--- a/src/Archmage/GameBundle/Resources/views/Home/patch.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Home/patch.html.twig
@@ -44,7 +44,7 @@
                         <li>Se han reducido costes de turnos del Templo, la Alquimia y las Aventuras.</li>
                         <li>Ahora hay bots!</li>
                         <li>Ahora los <span class="label label-extra">Hechizos</span> comprados en subasta deben ser investigados de forma normal, por lo que los <span class="label label-extra">Gremios</span> seguirán siendo útiles. En compensación, se ha reducido el coste inicial de oro en subasta.</li>
-                        <li>Ahora todas las imágenes son gratuitas! Jódete, copyright!</li>
+                        <li>Ahora todas las imágenes e iconos son libres y gratuitos!</li>
                         <li>Se ha reducido el tamaño de muchas imágenes para agilizar la carga de la web en dispositivos móviles.</li>
                     </ul>
                 </div>
