Temporada6. Nuevos edificios, establos y minas. Trabajando en ello.

--- a/src/Archmage/GameBundle/Resources/views/Home/patch.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Home/patch.html.twig
@@ -12,6 +12,19 @@
         </div>
         <div class="col-xs-12">
             <div class="panel panel-default">
+                <div class="panel-heading text-center">Versión 1.6b</div>
+                <div class="panel-body text-responsive">
+                    <ul>
+                        <li>Comienza la Temporada 6.</li>
+                        <li>Se ha añadido un nuevo edificio, los <span class="label label-extra">Establos</span>.</li>
+                        <li>Se ha añadido un nuevo edificio, las <span class="label label-extra">Minas</span>.</li>
+                    </ul>
+                </div>
+                <div class="panel-footer text-center">Beta abierta</div>
+            </div>
+        </div>
+        <div class="col-xs-12">
+            <div class="panel panel-default">
                 <div class="panel-heading text-center">Versión 1.5b</div>
                 <div class="panel-body text-responsive">
                     <ul>
