--- a/src/Archmage/UserBundle/Resources/views/logo.html.twig
+++ b/src/Archmage/UserBundle/Resources/views/logo.html.twig
@@ -1,2 +1,5 @@
 <h1>W&yuml;z&auml;rd</h1>
-<h3>TEMPORADA 5</h3>
+<span class="fa-stack fa-3x">
+  <i class="fa fa-calendar-o fa-stack-2x"></i>
+  <strong class="fa-stack-1x" style="margin-top: 0.25em; margin-left: -0.01em;">06</strong>
+</span>
