--- a/src/Archmage/GameBundle/Resources/views/Home/about.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Home/about.html.twig
@@ -7,15 +7,15 @@
     <div class="row">
         <div class="col-xs-12">
             <div class="page-header text-center">
-                <h1><i class="fa fa-fw fa-info"></i>Acerca</h1>
+                <h1><i class="fa fa-fw fa-info-circle"></i>Acerca de</h1>
             </div>
         </div>
         <div class="col-xs-12">
             <div class="panel panel-default">
                 <div class="panel-heading text-center">W&yuml;z&auml;rd</div>
                 <div class="panel-body text-responsive text-only">
-                    <p>He desarrollado este juego completamente desde cero para mejorar mis habilidades como desarrollador web, basándome en un antigüo juego con el que solía divertirme cuando era más joven: The Lord Archmage. Para ello, he empleado los siguientes frameworks y herramientas de desarrollo:</p>
-                    <br>
+                    <p>He desarrollado este juego completamente desde cero para mejorar mis habilidades como desarrollador web, basándome en un antiguo juego que solía divertirme hace muchos años: The Lord Archmage. Para ello, he empleado los siguientes frameworks y herramientas de desarrollo:</p>
+                    <br/>
                     <a class="btn btn-sm btn-primary" target="_blank" href="http://symfony.com/">Symfony2</a>
                     <a class="btn btn-sm btn-primary" target="_blank" href="http://www.doctrine-project.org/">Doctrine2</a>
                     <a class="btn btn-sm btn-primary" target="_blank" href="http://getbootstrap.com/css/">Bootstrap3</a>
@@ -30,8 +30,8 @@
                     <a class="btn btn-sm btn-primary" target="_blank" href="http://datatables.net/">DataTables</a>
                     <a class="btn btn-sm btn-primary" target="_blank" href="http://payum.org/">Payum</a>
                     <a class="btn btn-sm btn-primary" target="_blank" href="https://disqus.com/">Disqus</a>
-                    <p>El resultado está colgado también en mi propio servidor de producción, una RaspberryPi2, usando:</p>
-                    <br>
+                    <p>El resultado está colgado también en mi propio servidor de producción casero, una RaspberryPi2, usando:</p>
+                    <br/>
                     <a class="btn btn-sm btn-primary" target="_blank" href="https://www.archlinux.org/">Arch Linux ARMv7</a>
                     <a class="btn btn-sm btn-primary" target="_blank" href="https://httpd.apache.org/">Apache2</a>
                     <a class="btn btn-sm btn-primary" target="_blank" href="https://mariadb.org/">MariaDB</a>
@@ -39,14 +39,14 @@
                     <a class="btn btn-sm btn-primary" target="_blank" href="https://letsencrypt.org/">Let's Encrypt</a>
                     <a class="btn btn-sm btn-primary" target="_blank" href="https://www.paypal.com/">PayPal</a>
                     <p>Todas las imágenes son libres, con Creative Commons Zero. Además, están optimizadas para la web:</p>
-                    <br>
+                    <br/>
                     <a class="btn btn-sm btn-primary" target="_blank" href="http://game-icons.net/">Iconos de GameIcons</a>
                     <a class="btn btn-sm btn-primary" target="_blank" href="https://unsplash.com/">Fondos de Unsplash</a>
                     <a class="btn btn-sm btn-primary" target="_blank" href="https://imageoptim.com/">ImageOptim</a>
-                    <p>Un cariñoso saludo a todos aquellos que me han ayudado a hacer este juego posible. Nos vemos dentro!</p>
+                    <p>Un cariñoso saludo a todos aquellos que me han ayudado a hacer este juego posible. Nos vemos jugando!</p>
                 </div>
                 <div class="panel-footer text-center">
-                    <i class="fa fa-fw fa-lg fa-twitter"></i><a href="https://twitter.com/WyzardGame" class="link">@WyzardGame</a>
+                    <i class="fa fa-fw fa-lg fa-twitter"></i><a href="{{ path('archmage_game_home_contact') }}" class="link">Contacto</a>
                 </div>
             </div>
         </div>
