--- a/src/Archmage/GameBundle/Resources/views/Home/patch.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Home/patch.html.twig
@@ -18,6 +18,7 @@
                         <li>Comienza la Temporada 6.</li>
                         <li>El bonus de <span class="label label-legendary">Anillo Invocador</span>, <span class="label label-legendary">Anillo Avaricioso</span>, <span class="label label-legendary">Anillo Encantador</span> y <span class="label label-legendary">Anillo Poderoso</span> ha aumentado del 10% al 20%.</li>
                         <li>Se ha eliminado del juego a los Jinetes del Apocalipsis. Ahora, cuando los Dioses se queden sin tropas, lanzarán el <span class="label label-extra">Apocalipsis</span>, y los jugadores tendrán alrededor de una semana para luchar por la primera posición del ranking, como viene siendo habitual.</li>
+                        <li>Se ha duplicado la cantidad de tropas de todos los Dioses.</li>
                         <li>Se ha duplicado el coste base de investigación de todos los hechizos.</li>
                         <li>Se ha duplicado la duración base de todos los encantamientos.</li>
                         <li>El bonus de facción en combate ha aumentado del 20% al 100%.</li>
