--- a/src/Archmage/GameBundle/Resources/views/navbar.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/navbar.html.twig
@@ -59,10 +59,11 @@
                 <li class="dropdown" id="navbar-help">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="fa fa-fw fa-lg fa-question-circle"></i>Ayuda<span class="fa fa-fw fa-lg fa-caret-down"></span></a>
                     <ul class="dropdown-menu" role="menu">
+                        <li><a href="{{ path('archmage_game_home_contact') }}"><i class="fa fa-fw fa-lg fa-edit"></i>Contacto</a></li>
                         <li><a href="{{ path('archmage_game_home_help') }}"><i class="fa fa-fw fa-lg fa-book"></i>Wiki</a></li>
                         {% if app.user %}<li><a href="#" data-toggle="collapse" data-target="#navbar-collapsable" id="tour-start"><i class="fa fa-fw fa-lg fa-map-signs"></i>Tutorial</a></li>{% endif %}
                         <li><a href="{{ path('archmage_game_home_patch') }}"><i class="fa fa-fw fa-lg fa-medkit"></i>Parches</a></li>
-                        <li><a href="{{ path('archmage_game_home_about') }}"><i class="fa fa-fw fa-lg fa-info"></i>Acerca</a></li>
+                        <li><a href="{{ path('archmage_game_home_about') }}"><i class="fa fa-fw fa-lg fa-info-circle"></i>Acerca de</a></li>
                         <li class="divider"></li>
                         <li><a href="{{ path('fos_user_security_logout') }}"><i class="fa fa-fw fa-lg fa-sign-out"></i>Salir</a></li>
                     </ul>
