Arreglados algunos problemas con responsividad.

--- a/app/Resources/TwigBundle/views/Exception/error.html.twig
+++ b/app/Resources/TwigBundle/views/Exception/error.html.twig
@@ -3,7 +3,7 @@
 {% block body %}
 <div class="container">
     <div class="jumbotron text-center">
-        <h1>ERR<i class="fa fa-fw fa-ban"></i>R<br><small>Algo habrás hecho!</small></h1>
+        <h1>ERROR<br><small>Algo habrás hecho!</small></h1>
         <hr>
         <p>Por tu torpeza se han desencadenado fuerzas impredecibles del inframundo.<br>Ha muerto un gatito.</p>
         <img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/miscellany/error.png') }}">
