--- a/src/Archmage/GameBundle/Resources/views/Home/about.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Home/about.html.twig
@@ -46,7 +46,7 @@
                     <p>Un cariñoso saludo a todos aquellos que me han ayudado a hacer este juego posible. Nos vemos jugando!</p>
                 </div>
                 <div class="panel-footer text-center">
-                    <i class="fa fa-fw fa-lg fa-twitter"></i><a href="{{ path('archmage_game_home_contact') }}" class="link">Contacto</a>
+                    <i class="fa fa-edit"></i><a href="{{ path('archmage_game_home_contact') }}" class="link">Contacto</a>
                 </div>
             </div>
         </div>
