--- a/src/Archmage/GameBundle/Resources/views/Home/contact.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Home/contact.html.twig
@@ -20,51 +20,53 @@
             </div>
         </div>
         <div class="col-xs-12 col-md-6">
-            <div class="col-xs-12 col-md-6">
-                <div class="panel panel-default text-center">
-                    <div class="panel-heading">Twitter</div>
-                    <div class="panel-body text-only">
-                        <i class="fa fa-fw fa-3x fa-twitter" style="color: #55acee;"></i>
-                        <p>Sígueme y compárteme con tus amigos!</p>
-                    </div>
-                    <div class="panel-footer">
-                        <a class="btn btn-default" href="https://twitter.com/WyzardGame">@WyzardGame</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-xs-12 col-md-6">
-                <div class="panel panel-default text-center">
-                    <div class="panel-heading">Facebook</div>
-                    <div class="panel-body text-only">
-                        <i class="fa fa-fw fa-3x fa-facebook-official" style="color: #3b5998;"></i>
-                        <p>Es coña, en realidad paso totalmente de Facebook!</p>
-                    </div>
-                    <div class="panel-footer">
-                        <a class="btn btn-default" href="#">No tengo Facebook</a>
+            <div class="row">
+                <div class="col-xs-12 col-md-6">
+                    <div class="panel panel-default text-center">
+                        <div class="panel-heading">Twitter</div>
+                        <div class="panel-body text-only">
+                            <i class="fa fa-fw fa-3x fa-twitter" style="color: #55acee;"></i>
+                            <p>Sígueme y compárteme con tus amigos!</p>
+                        </div>
+                        <div class="panel-footer">
+                            <a class="btn btn-default" href="https://twitter.com/WyzardGame">@WyzardGame</a>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="col-xs-12 col-md-6">
-                <div class="panel panel-default text-center">
-                    <div class="panel-heading">Google+</div>
-                    <div class="panel-body text-only">
-                        <i class="fa fa-fw fa-3x fa-google-plus" style="color: #dc4e41;"></i>
-                        <p>Es coña, en realidad paso totalmente de Google+!</p>
-                    </div>
-                    <div class="panel-footer">
-                        <a class="btn btn-default" href="#">No tengo Google+</a>
+                <div class="col-xs-12 col-md-6">
+                    <div class="panel panel-default text-center">
+                        <div class="panel-heading">Facebook</div>
+                        <div class="panel-body text-only">
+                            <i class="fa fa-fw fa-3x fa-facebook-official" style="color: #3b5998;"></i>
+                            <p>Es coña, en realidad paso totalmente de Facebook!</p>
+                        </div>
+                        <div class="panel-footer">
+                            <a class="btn btn-default" href="#">No tengo Facebook</a>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="col-xs-12 col-md-6">
-                <div class="panel panel-default text-center">
-                    <div class="panel-heading">Instagram</div>
-                    <div class="panel-body text-only">
-                        <i class="fa fa-fw fa-3x fa-instagram" style="color: #3f729b;"></i>
-                        <p>Es coña, en realidad paso totalmente de Instagram!</p>
+                <div class="col-xs-12 col-md-6">
+                    <div class="panel panel-default text-center">
+                        <div class="panel-heading">Google+</div>
+                        <div class="panel-body text-only">
+                            <i class="fa fa-fw fa-3x fa-google-plus" style="color: #dc4e41;"></i>
+                            <p>Es coña, en realidad paso totalmente de Google+!</p>
+                        </div>
+                        <div class="panel-footer">
+                            <a class="btn btn-default" href="#">No tengo Google+</a>
+                        </div>
                     </div>
-                    <div class="panel-footer">
-                        <a class="btn btn-default" href="#">No tengo Instagram</a>
+                </div>
+                <div class="col-xs-12 col-md-6">
+                    <div class="panel panel-default text-center">
+                        <div class="panel-heading">Instagram</div>
+                        <div class="panel-body text-only">
+                            <i class="fa fa-fw fa-3x fa-instagram" style="color: #3f729b;"></i>
+                            <p>Es coña, en realidad paso totalmente de Instagram!</p>
+                        </div>
+                        <div class="panel-footer">
+                            <a class="btn btn-default" href="#">No tengo Instagram</a>
+                        </div>
                     </div>
                 </div>
             </div>
