Ahora la lista de leyendas muestra la temporada. Mejorado patch.

--- a/src/Archmage/GameBundle/Resources/views/Home/patch.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Home/patch.html.twig
@@ -17,13 +17,14 @@
                     <div class="panel-body text-responsive">
                         <ul>
                             <li>Comienza la Temporada 6.</li>
-                            <li>El bonus de <span class="label label-legendary">Anillo Invocador</span>, <span class="label label-legendary">Anillo Avaricioso</span>, <span class="label label-legendary">Anillo Encantador</span> y <span class="label label-legendary">Anillo Poderoso</span> ha aumentado del 10% al 20%.</li>
-                            <li>Se ha eliminado del juego a los Jinetes del Apocalipsis. Ahora, cuando los Dioses se queden sin tropas, lanzarán el <span class="label label-extra">Apocalipsis</span>, y los jugadores tendrán alrededor de una semana para luchar por la primera posición del ranking, como viene siendo habitual.</li>
-                            <li>Se ha duplicado la cantidad de tropas de todos los Dioses.</li>
-                            <li>Se ha duplicado el coste base de investigación de todos los hechizos.</li>
-                            <li>Se ha duplicado la duración base de todos los encantamientos.</li>
-                            <li>El bonus de facción en combate ha aumentado del 20% al 100%.</li>
-                            <li>El bonus de unidad en combate ha aumentado del 20% al 100%.</li>
+                            <li>Se ha duplicado el coste base de investigación de todos los hechizos (de 50 a 100 turnos por nivel).</li>
+                            <li>Se ha duplicado la duración base de todos los encantamientos (de 50 a 100 turnos por nivel).</li>
+                            <li>Se ha duplicado la duración de todas las subastas (de 1h a 2h).</li>
+                            <li>Se ha quintuplicado el bonus de facción en combate (de 20% a 100%).</li>
+                            <li>Se ha quintuplicado el bonus de unidad en combate (de 20% a 100%).</li>
+                            <li>Se ha duplicado la cantidad de tropas de todos los Dioses (de 100 a 200 <span class="label label-extra">Dragones</span>).</li>
+                            <li>Se ha duplicado el bonus de <span class="label label-legendary">Anillo Invocador</span>, <span class="label label-legendary">Anillo Avaricioso</span>, <span class="label label-legendary">Anillo Encantador</span> y <span class="label label-legendary">Anillo Poderoso</span> (de 10% a 20%).</li>
+                            <li>Se han eliminado del juego a los Jinetes del Apocalipsis. Ahora, cuando los Dioses se queden sin tropas, lanzarán el <span class="label label-extra">Apocalipsis</span>, y los jugadores tendrán alrededor de una semana para luchar por la primera posición del ranking, como viene siendo habitual.</li>
                         </ul>
                     </div>
                     <div class="panel-footer text-center" data-toggle="collapse" data-target="#collapse6"><span class="fa fa-lg fa-caret-up"></span> Beta abierta</div>
