--- a/src/Archmage/GameBundle/Resources/views/Account/legend.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Account/legend.html.twig
@@ -12,6 +12,7 @@
             <table id="datatable" class="table table-striped table-bordered table-condensed text-responsive" cellspacing="0" width="100%">
                 <thead>
                     <tr>
+                        <th class="text-center"><i class="fa fa-fw fa-leaf"></i><span class="hidden-xs">Temporada</span></th>
                         <th class="text-center"><i class="fa fa-fw fa-calendar"></i><span class="hidden-xs">Fecha</span></th>
                         <th class="text-center"><i class="fa fa-fw fa-user"></i><span class="hidden-xs">Nick</span></th>
                         <th class="text-center"><i class="fa fa-fw fa-rocket"></i><span class="hidden-xs">Poder</span></th>
@@ -21,6 +22,7 @@
                 <tbody>
                     {% for legend in legends %}
                     <tr>
+                        <td class="text-center">Temporada {{ legend.id }}</td>
                         <td class="text-center">{{ legend.datetime|date('d/m/Y H:i:s') }}</td>
                         <td class="text-center">{{ legend.nick|raw }}</td>
                         <td class="text-right">{{ legend.power|nf }}</td>
@@ -40,12 +42,12 @@
     $(document).ready(function() {
         var oTable = $("#datatable").dataTable({
             "columnDefs": [
-                { "type": "date-euro", "targets": 0 }
+                { "type": "date-euro", "targets": 1 }
             ],
-            "order": [[0, "desc"]],
+            "order": [[1, "desc"]],
             "sDom": 't<"col-xs-12 text-center"fp>',
             "displayStart": 0,
-            "pageLength": 10,
+            "pageLength": 50,
             "pagingType": "full_numbers",
             "language": {
                 "decimal": ",",
