Agregado carousel en about, con sus screenshots. Mejorados about, patch, login, logo. Ahora navbar se oculta si no estas logeado.

--- a/src/Archmage/GameBundle/Resources/public/css/style.css
+++ b/src/Archmage/GameBundle/Resources/public/css/style.css
@@ -416,3 +416,8 @@ html {-webkit-text-size-adjust: none !important;}
 #sortable .panel-heading {
     cursor: move;
 }
+/* CAROUSEL */
+#carousel-screenshots, #carousel-screenshots > img {
+    border-radius: 10px;
+    overflow: hidden;
+}
