--- a/src/Archmage/GameBundle/Resources/views/Home/patch.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Home/patch.html.twig
@@ -17,6 +17,7 @@
                     <div class="panel-body text-responsive">
                         <ul>
                             <li>Comienza la Temporada 6.</li>
+                            <li>Se ha duplicado el bonus de experiencia de los héroes por combate ganado (de 25 a 50).</li>
                             <li>Se ha duplicado el coste base de investigación de todos los hechizos (de 50 a 100 turnos por nivel).</li>
                             <li>Se ha duplicado la duración base de todos los encantamientos (de 50 a 100 turnos por nivel).</li>
                             <li>Se ha duplicado la duración de todas las subastas (de 1h a 2h).</li>
