--- a/src/Archmage/GameBundle/Resources/views/Home/about.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Home/about.html.twig
@@ -1,6 +1,6 @@
 {% extends "ArchmageGameBundle::layout.html.twig" %}
 
-{% block title %}Acerca{% endblock %}
+{% block title %}Acerca de{% endblock %}
 
 {% block body %}
 <div class="container">
@@ -8,6 +8,60 @@
         <div class="col-xs-12">
             <div class="page-header text-center">
                 <h1><i class="fa fa-fw fa-info-circle"></i>Acerca de</h1>
+            </div>
+        </div>
+        <div class="col-xs-12 col-md-10 col-md-offset-1">
+            <div id="carousel-screenshots" class="carousel slide panel" data-ride="carousel">
+                <!-- Indicators -->
+                <ol class="carousel-indicators">
+                    <li data-target="#carousel-screenshots" data-slide-to="0" class="active"></li>
+                    <li data-target="#carousel-screenshots" data-slide-to="1"></li>
+                    <li data-target="#carousel-screenshots" data-slide-to="2"></li>
+                    <li data-target="#carousel-screenshots" data-slide-to="3"></li>
+                    <li data-target="#carousel-screenshots" data-slide-to="4"></li>
+                </ol>
+                <!-- Wrapper for slides -->
+                <div class="carousel-inner" role="listbox">
+                    <div class="item active">
+                        <img src="{{ asset('bundles/archmagegame/images/miscellany/screenshot1.jpg') }}" alt="Screenshot1">
+                        <div class="carousel-caption">
+                            <p class="alert alert-primary">Construye tu propio imperio!</p>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <img src="{{ asset('bundles/archmagegame/images/miscellany/screenshot2.jpg') }}" alt="Screenshot2">
+                        <div class="carousel-caption">
+                            <p class="alert alert-warning">Acaudilla enormes ejércitos!</p>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <img src="{{ asset('bundles/archmagegame/images/miscellany/screenshot3.jpg') }}" alt="Screenshot3">
+                        <div class="carousel-caption">
+                            <p class="alert alert-info">Experimenta con la magia!</p>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <img src="{{ asset('bundles/archmagegame/images/miscellany/screenshot4.jpg') }}" alt="Screenshot4">
+                        <div class="carousel-caption">
+                            <p class="alert alert-success">Compite contra otros jugadores!</p>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <img src="{{ asset('bundles/archmagegame/images/miscellany/screenshot5.jpg') }}" alt="Screenshot5">
+                        <div class="carousel-caption">
+                            <p class="alert alert-danger">Destruye a tus enemigos!</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- Controls -->
+                <a class="left carousel-control" href="#carousel-screenshots" role="button" data-slide="prev">
+                    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="right carousel-control" href="#carousel-screenshots" role="button" data-slide="next">
+                    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
             </div>
         </div>
         <div class="col-xs-12">
