--- a/src/Archmage/GameBundle/Resources/public/css/theme.css
+++ b/src/Archmage/GameBundle/Resources/public/css/theme.css
@@ -255,8 +255,8 @@ th {
 }
 @font-face {
     font-family: 'Glyphicons Halflings';
-    src: url('http://bootstrap-live-customizer.com/bootstrap-3.3.5/fonts/glyphicons-halflings-regular.eot');
-    src: url('http://bootstrap-live-customizer.com/bootstrap-3.3.5/fonts/glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'), url('http://bootstrap-live-customizer.com/bootstrap-3.3.5/fonts/glyphicons-halflings-regular.woff2') format('woff2'), url('http://bootstrap-live-customizer.com/bootstrap-3.3.5/fonts/glyphicons-halflings-regular.woff') format('woff'), url('http://bootstrap-live-customizer.com/bootstrap-3.3.5/fonts/glyphicons-halflings-regular.ttf') format('truetype'), url('http://bootstrap-live-customizer.com/bootstrap-3.3.5/fonts/glyphicons-halflings-regular.svg#glyphicons_halflingsregular') format('svg');
+    src: url('/bower/bootstrap/fonts/glyphicons-halflings-regular.eot');
+    src: url('/bower/bootstrap/fonts/glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'), url('/bower/bootstrap/fonts/glyphicons-halflings-regular.woff2') format('woff2'), url('/bower/bootstrap/fonts/glyphicons-halflings-regular.woff') format('woff'), url('/bower/bootstrap/fonts/glyphicons-halflings-regular.ttf') format('truetype'), url('/bower/bootstrap/fonts/glyphicons-halflings-regular.svg#glyphicons_halflingsregular') format('svg');
 }
 .glyphicon {
     position: relative;
