--- a/src/Archmage/GameBundle/Resources/views/Army/attack.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Army/attack.html.twig
@@ -25,9 +25,20 @@
                             </div>
                         </div>
                     </div>
-                    <div class="panel-middle text-center" id="tour-attack">Detalles</div>
+                    <div class="panel-middle text-center" id="tour-attack">Plan de batalla</div>
                     <div class="panel-body text-center">
                         <div class="row">
+                            <div class="col-xs-12">
+                                <div class="form-group">
+                                    <div class="input-group">
+                                        <select class="form-control selectpicker show-tick dropup" id="type" name="type" data-live-search="false" data-size="3" title="Tipo">
+                                            <option value="conquest" data-content="<span class='label label-extra'>Conquista</span>">Conquista</option>
+                                            <option value="pillage" data-content="<span class='label label-extra'>Pillaje</span>">Pillaje</option>
+                                            <option value="siege" data-content="<span class='label label-extra'>Asedio</span>">Asedio</option>
+                                        </select>
+                                    </div>
+                                </div>
+                            </div>
                             <div class="col-xs-12">
                                 <div class="form-group">
                                     <div class="input-group">
